# whistle_detection

./: .gitignore  Cargo.toml  audio.rs  visualize.ipynb
models/: whistle_detection.onnx  whistle_detection.pth  whistle_detection2.pth  whistle_detection_1layer.onnx  whistle_detection_1layer.pth
src/: README.md  main.rs  model.ipynb  visualize.ipynb  visualize2.ipynb
